--- a/app/src/main/res/layout/custom_card_order.xml
+++ b/app/src/main/res/layout/custom_card_order.xml
@@ -25,19 +25,16 @@
                 android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
                 android:src="@drawable/profile" />
-
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="horizontal">
-
                     <TextView
                         android:id="@+id/customer_name_new"
                         android:layout_width="0dp"
@@ -48,7 +45,6 @@
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         android:textStyle="bold" />
-
                     <TextView
                         android:id="@+id/pay_meth"
                         android:layout_width="wrap_content"
@@ -58,13 +54,11 @@
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
                 </LinearLayout>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="horizontal">
-
                     <TextView
                         android:id="@+id/price_del"
                         android:layout_width="0dp"
@@ -75,7 +69,6 @@
                         android:textColor="@color/black"
                         android:textSize="16sp"
                          />
-
                     <TextView
                         android:id="@+id/allprice"
                         android:layout_width="wrap_content"
@@ -85,8 +78,6 @@
                         android:textColor="@color/black"
                         android:textSize="16sp" />
                 </LinearLayout>
-
-
                     <TextView
                         android:id="@+id/order_id"
                         android:layout_width="wrap_content"
@@ -96,40 +87,29 @@
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         android:textStyle="bold" />
-
-
-
             </LinearLayout>
-
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:orientation="vertical"/>
         </LinearLayout>
-
-        <!-- res/layout/order_item_ar.xml -->
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layoutDirection="rtl"
             android:orientation="vertical"
             android:padding="8dp">
-
-            <!-- باقي التخطيط كما هو -->
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingBottom="8dp">
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:orientation="horizontal">
-
                     <TextView
                         android:id="@+id/item_name_new"
                         android:layout_width="wrap_content"
@@ -148,18 +128,14 @@
                         android:fontFamily="@font/hacen_beirut_bight"
                         android:text="لبامة البياضة"
                         android:textColor="@color/black"
-                        android:textSize="15sp" />
-
-
+                        android:textSize="15sp"
+                        />
                 </LinearLayout>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:orientation="horizontal" >
-
-
                 <TextView
                     android:id="@+id/order_message_new"
                     android:layout_width="wrap_content"
@@ -169,7 +145,6 @@
                     android:paddingLeft="10dp"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
-
                 <TextView
                     android:id="@+id/customer_location"
                     android:layout_width="0dp"
@@ -181,19 +156,13 @@
                     android:textSize="15sp" />
                 </LinearLayout>
             </LinearLayout>
-
         </LinearLayout>
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:orientation="horizontal"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp">
-
-
-
             <Button
                 android:id="@+id/detailed_order_btn"
                 android:layout_width="0dp"
