--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    tools:context=".DetailedOrderActivity">
+    tools:context=".OrderDetailsActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -54,147 +54,114 @@
                 app:cardCornerRadius="8dp"
                 app:cardElevation="20dp">
 
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
+                    <!-- ImageView with overlayed content -->
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="130dp">
+
+                        <com.google.android.material.imageview.ShapeableImageView
+                            android:id="@+id/imageresinfodet"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/resrurant_image" />
+
+                        <!-- Overlay content -->
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom|end"
+                            android:orientation="horizontal"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/edit_text_rounded_corner"
+                            android:padding="5dp">
+
+                            <ImageView
+                                android:id="@+id/image_viewdet"
+                                android:layout_width="18dp"
+                                android:layout_height="18dp"
+                                android:layout_marginTop="2dp"
+                                android:layout_marginLeft="3dp"
+                                android:src="@drawable/ic_star"
+                                android:contentDescription="Rating" />
+
+                            <TextView
+                                android:id="@+id/valtvinfodet"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="5.0"
+                                android:textColor="@color/yellow_grad"
+                                android:textSize="18sp"
+                                android:textStyle="bold" />
+                        </LinearLayout>
+
+                        <TextView
+                            android:id="@+id/statusinfodet"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom|start"
+                            android:text="مفتوح"
+                            android:background="@drawable/edit_text_rounded_corner"
+                            android:textColor="@color/green"
+                            android:textSize="18sp"
+                            android:padding="5dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:textStyle="bold" />
+                    </FrameLayout>
+
+                    <!-- Restaurant details -->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <!-- First LinearLayout with background image -->
-
-                        <!-- Second LinearLayout below the first one -->
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="130dp"
-                            android:background="@drawable/resrurant_image"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="70dp"
-                                android:layout_height="25dp"
-                                android:layout_margin="15dp"
-                                android:background="@drawable/edit_text_rounded_corner"
-                                android:orientation="horizontal"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toEndOf="parent">
-
-                                <ImageView
-                                    android:id="@+id/image_view"
-                                    android:layout_width="18dp"
-                                    android:layout_height="18dp"
-                                    android:layout_gravity="center_vertical"
-                                    android:layout_marginStart="10dp"
-                                    android:contentDescription="Image"
-                                    android:src="@drawable/ic_star" />
-
-                                <TextView
-                                    android:id="@+id/valtv"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_vertical"
-                                    android:layout_marginStart="8dp"
-                                    android:fontFamily="@font/hacen_beirut_bight"
-                                    android:text="5.0"
-                                    android:textColor="@color/yellow_grad"
-                                    android:textSize="18sp"
-                                    android:textStyle="bold" />
-
-                            </LinearLayout>
-
-                            <androidx.constraintlayout.widget.ConstraintLayout
-                                android:id="@+id/constraintLayout"
-                                android:layout_width="70dp"
-                                android:layout_height="25dp"
-                                android:layout_margin="15dp"
-                                android:background="@drawable/edit_text_rounded_corner"
-                                android:orientation="horizontal"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="parent">
-
-                                <TextView
-                                    android:id="@+id/status"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_vertical"
-                                    android:fontFamily="@font/hacen_beirut_bight"
-                                    android:text="مفتوح"
-                                    android:textColor="@color/green"
-                                    android:textSize="18sp"
-                                    android:textStyle="bold"
-                                    app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent" />
-
-                            </androidx.constraintlayout.widget.ConstraintLayout>
-
-                        </androidx.constraintlayout.widget.ConstraintLayout>
+                        android:orientation="vertical"
+                        android:padding="10dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"
-                            android:orientation="vertical">
-
-
-                            <androidx.constraintlayout.widget.ConstraintLayout
-                                android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:id="@+id/resnameinfodet"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-
-                                <TextView
-                                    android:id="@+id/placeres"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="start"
-                                    android:fontFamily="@font/hacen_beirut_bight"
-                                    android:paddingStart="5dp"
-                                    android:text="لبامة-البياضة"
-                                    android:textColor="@color/pink"
-                                    android:textSize="20sp"
-                                    android:textStyle="bold"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent" />
-
-                                <ImageView
-                                    android:id="@+id/location_icon1"
-                                    android:layout_width="24dp"
-                                    android:layout_height="24dp"
-                                    android:layout_gravity="center_vertical"
-                                    android:padding="1dp"
-                                    android:src="@drawable/placeholder"
-                                    app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintEnd_toStartOf="@+id/placeres"
-                                    app:layout_constraintTop_toTopOf="parent"
-                                    app:layout_constraintVertical_bias="0.428" />
-
-                                <TextView
-                                    android:id="@+id/resname"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/hacen_beirut_bight"
-                                    android:text="ملك البروتين"
-                                    android:textColor="@color/black"
-                                    android:textSize="20sp"
-                                    android:textStyle="bold"
-                                    app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent" />
-
-                            </androidx.constraintlayout.widget.ConstraintLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
+                                android:fontFamily="@font/hacen_beirut_bight"
+                                android:text="ملك البروتين"
+                                android:textColor="@color/black"
+                                android:textSize="20sp"
+                                android:textStyle="bold"
+                                android:gravity="right"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent" />
+                            <ImageView
+                                android:id="@+id/location_icon1det"
+                                android:layout_width="24dp"
+                                android:layout_height="24dp"
+                                android:src="@drawable/placeholder"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toStartOf="@+id/placeres"
+                                app:layout_constraintTop_toTopOf="parent" />
+                            <TextView
+                                android:id="@+id/placeresinfodet"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:orientation="horizontal">
+                                android:fontFamily="@font/hacen_beirut_bight"
+                                android:text="لبامة-البياضة"
+                                android:textColor="@color/pink"
+                                android:textSize="20sp"
+                                android:gravity="left"
+                                android:textStyle="bold"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
 
-                            </LinearLayout>
                         </LinearLayout>
-
                     </LinearLayout>
                 </LinearLayout>
 
@@ -223,7 +190,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:fontFamily="@font/hacen_beirut_bight"
-                            android:text="معلومات الزبون "
+                            android:text="معلومات  الزبون"
                             android:textColor="@android:color/black"
                             android:textSize="20sp"
                             android:textStyle="bold" />
@@ -248,27 +215,16 @@
 
 
                                 <TextView
-                                    android:id="@+id/name_user"
+                                    android:id="@+id/name_user_det"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="8dp"
+                                    android:gravity="right"
                                     android:fontFamily="@font/hacen_beirut_bight"
                                     android:text="اسم الزبون"
                                     android:textColor="@android:color/black"
                                     android:textSize="16sp"
                                     android:textStyle="bold" />
-
-                                <TextView
-                                    android:id="@+id/place_user"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="8dp"
-                                    android:fontFamily="@font/hacen_beirut_bight"
-                                    android:text="حي فاتح نوفمبر لبامة البياضة"
-                                    android:textColor="@color/grey"
-                                    android:textSize="16sp"
-                                    android:textStyle="bold" />
-
                             </LinearLayout>
                         </LinearLayout>
 
@@ -305,11 +261,8 @@
 
 
                     </LinearLayout>
-
-
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
-
             <LinearLayout
                 android:id="@+id/order_compenment"
                 android:layout_width="match_parent"
@@ -341,7 +294,7 @@
                     android:orientation="vertical">
 
                     <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerView"
+                        android:id="@+id/itemRecyclerView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -352,30 +305,31 @@
                         app:layout_constraintTop_toBottomOf="@id/toolbar" />
                 </LinearLayout>
 
+
                 <TextView
-                    android:id="@+id/additional_information_title"
+                    android:id="@+id/additional_information_title_mandel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="20dp"
                     android:fontFamily="@font/hacen_beirut_bight"
-                    android:text="معلومات إضافية"
+                    android:text=" معلومات إضافية "
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/additional_information_text"
+                    android:id="@+id/additional_information_text_mandel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
+                    android:gravity="right"
+                    android:layout_marginRight="10dp"
                     android:fontFamily="@font/hacen_beirut_bight"
                     android:text="لمة دون أن يراها الآخرون، ثم يرسم صورة للكلمة والبعض الآخر لتخمين ما هي الكلمة"
                     android:textColor="@color/grey"
                     android:textSize="16sp"
                     android:textStyle="bold" />
-
-
                 <Button
                     android:id="@+id/delivery_order_done"
                     android:layout_width="150dp"
@@ -388,9 +342,17 @@
                     android:textColor="@color/white"
                     android:textSize="20dp" />
             </LinearLayout>
-
-
         </LinearLayout>
-
     </ScrollView>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView_odet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:itemIconTint="@color/tomato_red"
+        app:itemTextColor="@color/tomato_red"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_navigation_menu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
