--- a/app/src/main/res/layout/custom_order_detailed.xml
+++ b/app/src/main/res/layout/custom_order_detailed.xml
@@ -41,23 +41,41 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
-                <TextView
-                    android:id="@+id/name_user"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/name_user"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/hacen_beirut_bight"
                     android:text="برغر"
+                    android:gravity="right"
                     android:textColor="@android:color/black"
                     android:textSize="25sp"
                     android:textStyle="bold" />
 
+                    <TextView
+                        android:id="@+id/count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/hacen_beirut_bight"
+                        android:text="12 حبة"
+                        android:layout_marginLeft="10dp"
+                        android:gravity="center"
+                        android:textColor="@android:color/black"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
                 <TextView
                     android:id="@+id/place_user"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
+                    android:gravity="right"
                     android:fontFamily="@font/hacen_beirut_bight"
                     android:text="500.00 دج"
                     android:textColor="@color/black"
@@ -69,51 +87,7 @@
 
         </LinearLayout>
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingRight="50dp"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/additional_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:fontFamily="@font/hacen_beirut_bight"
-                android:text="الاضافات : "
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/additional1_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:fontFamily="@font/hacen_beirut_bight"
-                    android:text="هريسة * 2 "
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-                <TextView
-                    android:id="@+id/additional2_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:fontFamily="@font/hacen_beirut_bight"
-                    android:text="مايونيز * 1 "
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-
-        </LinearLayout></LinearLayout>
+    </LinearLayout>
 
 
 </androidx.cardview.widget.CardView>
