--- a/app/src/main/res/layout/custom_order_history.xml
+++ b/app/src/main/res/layout/custom_order_history.xml
@@ -25,7 +25,7 @@
 
 
                 <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/shapeableImageView"
+                    android:id="@+id/shapeableImageView_history"
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:layout_centerInParent="true"
@@ -47,7 +47,7 @@
 
 
                     <TextView
-                        android:id="@+id/order_id"
+                        android:id="@+id/order_id_history"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -58,7 +58,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/number_items"
+                        android:id="@+id/number_items_history"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
